<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.example.beatbox.model.UserRequest" />

        <variable
            name="userViewModel"
            type="com.example.beatbox.viewmodel.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="@dimen/login_text_margin"
            android:layout_marginTop="200dp"
            android:hint="@string/login_user_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_login_user"
                android:text="@={userViewModel.useName}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password_layout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="@dimen/login_text_margin"
            android:layout_marginTop="10dp"
            android:hint="@string/login_user_password"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_login_password"
                android:text="@={userViewModel.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/title"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/app_title1"
            android:textDirection="firstStrong"
            android:textSize="@dimen/login_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_title2"
            android:textDirection="firstStrong"
            android:textSize="@dimen/login_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.LoginAndRegisterBtnShape"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password_layout" />
        <LinearLayout
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:text="@string/to_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_or"
                android:textSize="@dimen/text_or_size">

            </TextView>

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:text="@string/to_register" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>